tests/testcases/errors/BCE0089-3.boo
"""
BCE0089-3.boo(7,11): BCE0089: Type 'Foo' already has a definition for 'bar'.
"""
class Foo:
	bar
	
	class bar:
		pass
